# mtx-config

./: .env.example  .env.template  .gitignore  CHANGELOG.md  CHANGELOG_SETTINGS_FIX.md  CONTRIBUTING.md  GEMINI.md  IMPORT_EXPORT_README.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  SUMMARY.md  TESTS.md  gemini.json  package-lock.json  pyproject.toml  pytest-playwright.ini  pytest-unit.ini  pytest.ini  requirements.txt  run.sh  run_tests.sh  test_singleton.py
arh/: Gemini.md  main.py.old
arh/ui_components/: paths_tab.py  ui_utils.py
core/: config.py
doc/: mediamtx01.yml.json
doc/task/: task02.md  task04.md  task05.md  task06.md  task07.md  task08.md  task10.md  task_next
models/: config_models.py  models.py
src/: app.py  config.py  config_manager.py  config_models.py  main.py  models.py  mtx_manager.py  read_config.py
src/api/: health.py  mtx.py
src/clients/: abc_conf_client.py  config_clients.py  json_client.py  yaml_client.py
src/core/: config.py  keys.py  log.py
src/models/: check_models.py
src/service/: mtx_manager.py
src/ui_components/: auth_tab.py  generic_tab.py  paths_tab.py  preview_tab.py  rtsp_tab.py  ui_utils.py
src/utils/: json_utils.py  read_config.py  rw_config.py  split_config.py  yaml_utils.py
tests/: test_config_clients.py  test_filters.py  test_import_config.py  test_import_export.py  test_json_utils.py  test_models.py
tests/json_test/: rtmp.json  rtsp.json
tests/yml_test/: mediamtx01.yml
work/: mediamtx01.yml  mediamtx01.yml.bak
work/json/: auth.json  hls.json  paths.json  values_app.json  values_hls.json  (+6 more)
(+5 files in other folders)
